--- a/image_preprocessing.ipynb
+++ b/image_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from tensorflow.keras.models import Sequential , load_model\n",
-    "from tensorflow.keras.layers import Dense, Input, Conv2D, MaxPooling2D, Flatten"
+    "from tensorflow.keras.layers import Dense, Input, Conv2D, MaxPooling2D, Flatten\n",
+    "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping"
    ]
   },
   {
@@ -27,51 +28,13 @@
     "\n",
     "from keras.models import Sequential, load_model\n",
     "from keras.layers import Dense, Input, Conv2D, MaxPooling2D, Flatten\n",
+    "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
     "######################################################"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# 폴더 리스트 생성\n",
-    "folder_list = os.listdir('/Users/jsp/Desktop/workspace/projects/fstteamproject/main/git_teamprj/proj1/open/train')\n",
-    "folder_list.remove('.DS_Store')\n",
-    "\n",
-    "# 데이터를 저장할 2차원 배열 생성\n",
-    "data = []\n",
-    "count = []\n",
-    "\n",
-    "# 폴더 리스트를 순회하며\n",
-    "for folder_name in folder_list:\n",
-    "    folder_path = '/Users/jsp/Desktop/workspace/projects/fstteamproject/main/git_teamprj/proj1/open/train/' + folder_name\n",
-    "    #print(folder_path)\n",
-    "    # 폴더 내 이미지 리스트 생성\n",
-    "    image_list = os.listdir(folder_path)\n",
-    "    list_len = len(image_list)\n",
-    "    count.append(list_len)\n",
-    "    # 해당 폴더 내 이미지 리스트를 순회하며\n",
-    "    for image_name in image_list:\n",
-    "        image_path = folder_path +'/' + image_name\n",
-    "        \n",
-    "        # 이미지 로드 및 그레이스케일 적용\n",
-    "        img = cv.imread(image_path)\n",
-    "        gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
-    "        \n",
-    "        # 생성한 데이터 배열에 이미지 추가\n",
-    "        data.append(gray)\n",
-    "        \n",
-    "        \n",
-    "# 데이터 배열 확인\n",
-    "#print(np.array(data).shape)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,37 +62,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "answer = []\n",
     "for idx, nm in enumerate(folder_list):\n",
     "        answer += [nm] * pic_count[idx]\n",
-    "answer = np.array(answer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "answer = pd.get_dummies(answer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "answer = np.array(answer)\n",
+    "answer = pd.get_dummies(answer)\n",
     "answer = answer.values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -144,35 +91,35 @@
        "       [False, False, False, ...,  True, False, False]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "answer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xtrain, xtest, ytrain, ytest = train_test_split(np.array(data),answer,test_size=0.3, shuffle=True)"
+    "answer\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "xtrain, xtest, ytrain, ytest = train_test_split(np.array(data),answer,test_size=0.2, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2419, 300, 300)\n",
-      "(1038, 300, 300)\n"
+      "(2765, 300, 300)\n",
+      "(692, 300, 300)\n"
      ]
     }
    ],
@@ -183,17 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xtrain = xtrain.reshape(2419,300,300,1) \n",
-    "xtest = xtest.reshape(1038,300,300,1)"
+    "xtrain = xtrain.reshape(2765,300,300,1) \n",
+    "xtest = xtest.reshape(692,300,300,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -218,11 +165,13 @@
       "                                                                 \n",
       " dense (Dense)               (None, 32)                22733856  \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 19)                627       \n",
+      " dense_1 (Dense)             (None, 24)                792       \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 19)                475       \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 22,734,803\n",
-      "Trainable params: 22,734,803\n",
+      "Total params: 22,735,443\n",
+      "Trainable params: 22,735,443\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -238,238 +187,129 @@
     "            ])\n",
     "\n",
     "model.add(Dense(32, activation= 'relu'))\n",
+    "model.add(Dense(24, activation= 'relu'))\n",
     "model.add(Dense(19, activation= 'softmax'))\n",
     "\n",
-    "model.summary()"
+    "model.summary()\n",
+    "model.compile(optimizer= 'adam', loss='categorical_crossentropy',metrics=['accuracy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "early_stopping_callback = EarlyStopping(monitor='val_loss', patience=20)\n",
+    "modelpath=\"bestmodel.hdf5\"\n",
+    "checkpointer = ModelCheckpoint(filepath=modelpath, monitor='val_loss', verbose=0, save_best_only=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n"
+      "Epoch 1/500\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-06 22:02:40.261464: W tensorflow/tsl/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2023-05-08 15:03:14.693855: W tensorflow/tsl/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25/25 [==============================] - 8s 254ms/step - loss: 3697.6536 - accuracy: 0.1616 - val_loss: 2.9466 - val_accuracy: 0.0645\n",
-      "Epoch 2/10\n",
-      "25/25 [==============================] - 7s 260ms/step - loss: 61.6595 - accuracy: 0.0542 - val_loss: 2.9282 - val_accuracy: 0.0645\n",
-      "Epoch 3/10\n",
-      "25/25 [==============================] - 6s 228ms/step - loss: 2.9200 - accuracy: 0.2906 - val_loss: 2.9081 - val_accuracy: 0.4143\n",
-      "Epoch 4/10\n",
-      "25/25 [==============================] - 6s 226ms/step - loss: 2.9008 - accuracy: 0.4031 - val_loss: 2.8883 - val_accuracy: 0.4143\n",
-      "Epoch 5/10\n",
-      "25/25 [==============================] - 6s 227ms/step - loss: 2.8819 - accuracy: 0.4031 - val_loss: 2.8682 - val_accuracy: 0.4143\n",
-      "Epoch 6/10\n",
-      "25/25 [==============================] - 6s 227ms/step - loss: 2.8628 - accuracy: 0.4031 - val_loss: 2.8482 - val_accuracy: 0.4143\n",
-      "Epoch 7/10\n",
-      "25/25 [==============================] - 6s 228ms/step - loss: 2.8438 - accuracy: 0.4031 - val_loss: 2.8285 - val_accuracy: 0.4143\n",
-      "Epoch 8/10\n",
-      "25/25 [==============================] - 6s 230ms/step - loss: 2.8252 - accuracy: 0.4031 - val_loss: 2.8089 - val_accuracy: 0.4143\n",
-      "Epoch 9/10\n",
-      "25/25 [==============================] - 6s 229ms/step - loss: 2.8066 - accuracy: 0.4031 - val_loss: 2.7895 - val_accuracy: 0.4143\n",
-      "Epoch 10/10\n",
-      "25/25 [==============================] - 6s 229ms/step - loss: 2.7881 - accuracy: 0.4031 - val_loss: 2.7703 - val_accuracy: 0.4143\n"
+      "56/56 [==============================] - 9s 143ms/step - loss: 539.1890 - accuracy: 0.1834 - val_loss: 3.9950 - val_accuracy: 0.3382\n",
+      "Epoch 2/500\n",
+      "56/56 [==============================] - 7s 132ms/step - loss: 3.1139 - accuracy: 0.3186 - val_loss: 3.1232 - val_accuracy: 0.3194\n",
+      "Epoch 3/500\n",
+      "56/56 [==============================] - 7s 127ms/step - loss: 2.5872 - accuracy: 0.5089 - val_loss: 3.0383 - val_accuracy: 0.4162\n",
+      "Epoch 4/500\n",
+      "56/56 [==============================] - 7s 120ms/step - loss: 2.0587 - accuracy: 0.5870 - val_loss: 2.9381 - val_accuracy: 0.4104\n",
+      "Epoch 5/500\n",
+      "56/56 [==============================] - 7s 125ms/step - loss: 1.7335 - accuracy: 0.6152 - val_loss: 3.0389 - val_accuracy: 0.4133\n",
+      "Epoch 6/500\n",
+      "56/56 [==============================] - 7s 123ms/step - loss: 1.5809 - accuracy: 0.6470 - val_loss: 3.1035 - val_accuracy: 0.4133\n",
+      "Epoch 7/500\n",
+      "56/56 [==============================] - 7s 118ms/step - loss: 1.4126 - accuracy: 0.6669 - val_loss: 3.1645 - val_accuracy: 0.4191\n",
+      "Epoch 8/500\n",
+      "56/56 [==============================] - 7s 117ms/step - loss: 1.2137 - accuracy: 0.6937 - val_loss: 3.2822 - val_accuracy: 0.4147\n",
+      "Epoch 9/500\n",
+      "56/56 [==============================] - 7s 116ms/step - loss: 1.0623 - accuracy: 0.7461 - val_loss: 3.2672 - val_accuracy: 0.4147\n",
+      "Epoch 10/500\n",
+      "56/56 [==============================] - 7s 117ms/step - loss: 1.0989 - accuracy: 0.7360 - val_loss: 3.1379 - val_accuracy: 0.4234\n",
+      "Epoch 11/500\n",
+      "56/56 [==============================] - 7s 117ms/step - loss: 0.9800 - accuracy: 0.7537 - val_loss: 3.7622 - val_accuracy: 0.4249\n",
+      "Epoch 12/500\n",
+      "56/56 [==============================] - 7s 117ms/step - loss: 0.9240 - accuracy: 0.7797 - val_loss: 3.5889 - val_accuracy: 0.3974\n",
+      "Epoch 13/500\n",
+      "56/56 [==============================] - 7s 117ms/step - loss: 0.7165 - accuracy: 0.8047 - val_loss: 4.1336 - val_accuracy: 0.4263\n",
+      "Epoch 14/500\n",
+      "56/56 [==============================] - 7s 117ms/step - loss: 0.6900 - accuracy: 0.8297 - val_loss: 4.5074 - val_accuracy: 0.4147\n",
+      "Epoch 15/500\n",
+      "56/56 [==============================] - 7s 117ms/step - loss: 0.6143 - accuracy: 0.8405 - val_loss: 3.9876 - val_accuracy: 0.4032\n",
+      "Epoch 16/500\n",
+      "56/56 [==============================] - 7s 118ms/step - loss: 0.5458 - accuracy: 0.8510 - val_loss: 4.5815 - val_accuracy: 0.4162\n",
+      "Epoch 17/500\n",
+      "56/56 [==============================] - 7s 117ms/step - loss: 0.5760 - accuracy: 0.8622 - val_loss: 4.3021 - val_accuracy: 0.4176\n",
+      "Epoch 18/500\n",
+      "56/56 [==============================] - 7s 117ms/step - loss: 0.5858 - accuracy: 0.8401 - val_loss: 4.6200 - val_accuracy: 0.4335\n",
+      "Epoch 19/500\n",
+      "56/56 [==============================] - 7s 117ms/step - loss: 0.5012 - accuracy: 0.8738 - val_loss: 5.0721 - val_accuracy: 0.4191\n",
+      "Epoch 20/500\n",
+      "56/56 [==============================] - 7s 118ms/step - loss: 0.4486 - accuracy: 0.8828 - val_loss: 5.7099 - val_accuracy: 0.4147\n",
+      "Epoch 21/500\n",
+      "56/56 [==============================] - 7s 122ms/step - loss: 0.4574 - accuracy: 0.8875 - val_loss: 4.4208 - val_accuracy: 0.3887\n",
+      "Epoch 22/500\n",
+      "56/56 [==============================] - 7s 117ms/step - loss: 0.4566 - accuracy: 0.8835 - val_loss: 5.6686 - val_accuracy: 0.4191\n",
+      "Epoch 23/500\n",
+      "56/56 [==============================] - 7s 119ms/step - loss: 0.4164 - accuracy: 0.8973 - val_loss: 5.4665 - val_accuracy: 0.4104\n",
+      "Epoch 24/500\n",
+      "56/56 [==============================] - 7s 118ms/step - loss: 0.3477 - accuracy: 0.9052 - val_loss: 5.4419 - val_accuracy: 0.4032\n"
      ]
     }
    ],
    "source": [
-    "model.compile(optimizer= 'adam', loss='categorical_crossentropy',metrics=['accuracy'])\n",
-    "history = model.fit(xtrain,ytrain, validation_data=(xtest, ytest), batch_size=100, epochs = 10)"
+    "\n",
+    "history = model.fit(xtrain,ytrain, validation_data=(xtest, ytest), batch_size=50, epochs = 500, verbose=1, callbacks=[early_stopping_callback,checkpointer])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save('wall_model_ver1.hdf5')"
+    "my_model = load_model('bestmodel.hdf5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python Platform: macOS-13.3.1-arm64-arm-64bit\n",
-      "Tensor Flow Version: 2.12.0\n",
-      "Keras Version: 2.12.0\n",
-      "\n",
-      "Python 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:12:31) [Clang 14.0.6 ]\n",
-      "Pandas 2.0.1\n",
-      "Scikit-Learn 1.2.2\n",
-      "GPU is available\n"
+      "22/22 [==============================] - 1s 39ms/step - loss: 2.9381 - accuracy: 0.4104\n",
+      "Test accuracy: 0.41040462255477905\n"
      ]
     }
    ],
    "source": [
-    "# What version of Python do you have?\n",
-    "import sys\n",
-    "\n",
-    "import tensorflow.keras\n",
-    "import pandas as pd\n",
-    "import sklearn as sk\n",
-    "import tensorflow as tf\n",
-    "import platform\n",
-    "\n",
-    "print(f\"Python Platform: {platform.platform()}\")\n",
-    "print(f\"Tensor Flow Version: {tf.__version__}\")\n",
-    "print(f\"Keras Version: {tensorflow.keras.__version__}\")\n",
-    "print()\n",
-    "print(f\"Python {sys.version}\")\n",
-    "print(f\"Pandas {pd.__version__}\")\n",
-    "print(f\"Scikit-Learn {sk.__version__}\")\n",
-    "gpu = len(tf.config.list_physical_devices('GPU'))>0\n",
-    "print(\"GPU is\", \"available\" if gpu else \"NOT AVAILABLE\")"
+    "score = my_model.evaluate(xtest, ytest)\n",
+    "print('Test accuracy:', score[1])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Python Platform: macOS-13.3.1-arm64-arm-64bit\n",
-      "PyTorch Version: 2.0.0\n",
-      "\n",
-      "Python 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:12:31) [Clang 14.0.6 ]\n",
-      "Pandas 2.0.1\n",
-      "Scikit-Learn 1.2.2\n",
-      "GPU is NOT AVAILABLE\n",
-      "MPS (Apple Metal) is AVAILABLE\n",
-      "Target device is mps\n"
-     ]
-    }
-   ],
-   "source": [
-    "# What version of Python do you have?\n",
-    "import sys\n",
-    "import platform\n",
-    "import torch\n",
-    "import pandas as pd\n",
-    "import sklearn as sk\n",
-    "\n",
-    "has_gpu = torch.cuda.is_available()\n",
-    "has_mps = getattr(torch,'has_mps',False)\n",
-    "device = \"mps\" if getattr(torch,'has_mps',False) \\\n",
-    "    else \"gpu\" if torch.cuda.is_available() else \"cpu\"\n",
-    "\n",
-    "print(f\"Python Platform: {platform.platform()}\")\n",
-    "print(f\"PyTorch Version: {torch.__version__}\")\n",
-    "print()\n",
-    "print(f\"Python {sys.version}\")\n",
-    "print(f\"Pandas {pd.__version__}\")\n",
-    "print(f\"Scikit-Learn {sk.__version__}\")\n",
-    "print(\"GPU is\", \"available\" if has_gpu else \"NOT AVAILABLE\")\n",
-    "print(\"MPS (Apple Metal) is\", \"AVAILABLE\" if has_mps else \"NOT AVAILABLE\")\n",
-    "print(f\"Target device is {device}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def predict_image_sample_(model, X_test, y_test, test_id=-1):\n",
-    "    if test_id < 0:\n",
-    "        from random import randrange\n",
-    "        test_sample_id = randrange(10000)\n",
-    "    else:\n",
-    "        test_sample_id = test_id\n",
-    "        \n",
-    "    test_image = X_test[test_sample_id]\n",
-    "    \n",
-    "    #plt.imshow(test_image, cmap='gray')\n",
-    "    \n",
-    "    test_image = test_image.reshape(1,28,28,1)\n",
-    "\n",
-    "    y_actual = y_test[test_sample_id]\n",
-    "    print(\"y_actual number=\", y_actual)\n",
-    "    \n",
-    "    y_pred = model.predict(test_image)\n",
-    "    #print(\"y_pred=\", y_pred)\n",
-    "    y_pred_num = np.argmax(y_pred, axis=1)[0]\n",
-    "    print(\"y_pred number=\", y_pred_num)\n",
-    "    \n",
-    "    return y_actual, y_pred_num"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all, n = 0,0\n",
-    "(X_train, y_train), (X_test, y_test) = mnist.load_data()\n",
-    "\n",
-    "for i in range(500):\n",
-    "    all +=1\n",
-    "    y_actual, y_pred_num = predict_image_sample_(model, X_test, y_test, test_id= i)\n",
-    "    if y_actual == y_pred_num:\n",
-    "        n += 1 \n",
-    "    else : pass\n",
-    "print(f'총횟수 = {all} , 맞춘횟수={n} , 정확도(Accuracy)={(n/all)*100}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
