--- a/연습/cnn_resnet50.ipynb
+++ b/연습/cnn_resnet50.ipynb
@@ -277,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_model = load_model('bestmodel.hdf5')"
+    "my_model = load_model('resnet50_bestmodel.hdf5')"
    ]
   },
   {
