--- a/model_template/data_aug.ipynb
+++ b/model_template/data_aug.ipynb
@@ -54,7 +54,7 @@
     "    augment_number=10\n",
     "    \n",
     "    if len(image_list) > 600:\n",
-    "        break\n",
+    "        continue\n",
     "    elif 500 < len(image_list) < 600:\n",
     "        auG(f_path,image_list, i, 7)\n",
     "    elif 300 < len(image_list) < 400:\n",
